# Iris

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: provider-api-wrapper.md
docs/dropped/: context system的设计.md
examples/: provider_basic.py
scripts/: mock_agent_flow.py
src/iris/: __init__.py  config.py  log.py
src/iris/agents/: README.md  __init__.py
src/iris/context/: README.md  __init__.py  builder.py  config.py  models.py  renderer.py
src/iris/core/: __init__.py  (+1 more)
tests/: test_config.py  test_llm_factory.py  test_log.py  test_message_models.py  test_provider_adapters.py  test_provider_client.py  test_provider_compat.py  test_provider_formats.py
tests/agents/: test_agent_config.py  test_tools_config.py
tests/context/: test_context_builder.py  test_context_config.py  test_context_models.py  test_context_templates.py  test_context_v2.py
tests/memory/: __init__.py  test_config.py  test_context.py  test_mirror.py  test_models.py  test_orchestrator.py  test_service.py  test_sqlite_store.py  test_tools.py
tests/observability/: test_tool_log.py
tests/providers/: test_provider_factory.py
tests/runtime/: fakes.py  test_assembler.py  test_errors.py  test_factory.py  test_fake_provider_turn.py  test_loop.py  test_memory.py  test_models.py  test_tool_bridge.py
tests/scripts/: test_mock_agent_flow.py
tests/session/: test_sqlite_store.py
tests/templates/: test_scaffold.py
tests/tools/: test_circuit_breaker.py  test_decorators.py  test_discovery.py  test_executor.py  test_executor_tool_log.py  test_file_registry.py  test_file_tools.py  test_middleware.py  test_registry.py  test_schema.py  test_stage_4.py
(+64 files in other folders)
